# pgcpp

./: .clang-tidy  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Dependencies.cmake  Doxyfile  ExternalProject  ExternalProject.cmake  Main.cpp  ProjectFiles.cmake  README.md  ck_plane.hpp  common_concepts.h  envconfig.sh  euclid_plane.hpp  hyper_plane.hpp  linux-amd64-git-mount.tgz  note.md  pg_common.hpp  pg_line.hpp  pg_point.hpp  proj_plane.hpp  proj_plane_concepts.h  test.cpp
.github/workflows/: ci.yml  cmake-coverage.yml  cmake-debug.yml  cmake.yml
app/: CMakeLists.txt  main.cpp
app/src/: PgMain.cpp  example.cpp~  main.cpp
cmake/: CI.CTestScript.cmake  README.md
cmake/Modules/: FindAssist.cmake  FindAtom.cmake  FindCatch2.cmake  FindPyKEP.cmake  FindSGP4.cmake  FindSQLiteCpp.cmake  FindSpot.cmake  Findastro.cmake  Findcontrol.cmake  Findintegrate.cmake  Findpgcpp.cmake  Findsml.cmake
docs/: Makefile  conf.py  how_created.rst  index.rst  using_intersphinx.rst
include/: example.h
include/cppbase/: cppbase.hpp  factorial.hpp
include/pgcpp/: ck_plane.hpp  common_concepts.h  euclid_plane.hpp  fractions.hpp  pg_common.hpp  (+6 more)
lib/: CMakeLists.txt
scripts/: install_cmake.sh
src/: .example.cpp.un~  example.cpp  example.cpp~  factorial.cpp  fraction.cpp  main.cpp
test/: testCppbase.cpp  testFactorial.cpp  test_ck_plane.cpp  test_ell_plane.cpp  test_euclid.cpp  test_euclid_plane.cpp  test_frac.cpp  test_persp_plane.cpp  test_proj_plane.cpp
tests/: CMakeLists.txt  main.cpp  test_ck_plane.cpp  test_concepts.cpp  test_ell_plane.cpp  test_euclid.cpp  test_frac.cpp  test_persp_plane.cpp  test_proj_plane.cpp
(+48 files in other folders)
